--- a/package.json
+++ b/package.json
@@ -8,5 +8,10 @@
     "express": "^4.16.4",
     "pug": "^2.0.3",
     "sass": "^1.15.2"
+  },
+  "scripts": {
+    "build": "node scripts/build.js",
+    "clean": "rm -rf public/",
+    "server": "node scripts/server.js"
   }
 }
