--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,12 @@
 language: node_js
 node_js:
   - 7
-jobs:
-  include:
-    - stage: build
-      before_script: npm install
-      script: npm build
-    - stage: deploy
-      provider: pages
-      skip_cleanup: true
-      github_token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
-      keep_history: true
-      local_dir: public/
-      on:
-        branch: master
+deploy:
+  provider: pages
+  before_script: npm install && npm build
+  skip_cleanup: true
+  github_token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
+  keep_history: true
+  local_dir: public/
+  on:
+    branch: master
