--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,12 @@
 language: node_js
 node_js:
   - 7
+install:
+  - npm install
+script:
+  - npm build
 deploy:
   provider: pages
-  before_script: npm install && npm build
   skip_cleanup: true
   github_token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
   keep_history: true
